update fullCardComp logo background, fix fav LoginCard bookmark icon not showing

--- a/client/src/components/cardComponent/styles/cardInputForm.module.css
+++ b/client/src/components/cardComponent/styles/cardInputForm.module.css
@@ -10,7 +10,7 @@
     align-items: center;
     background-color: var(--box-bg-primary);
     padding-left: 5%;
-    webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -30,7 +30,7 @@
     align-items: center;
     background-color: var(--box-bg-primary);
     padding-left: 0%;
-    webkit-tap-highlight-color: transparent;
+    -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -201,6 +201,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background-color: var(--logo-div-bg); */
+}
+
+.logoSelectedBg {
+    background-color: var(--logo-div-bg);
 }
 
 .logoIcon {
