--- a/client/src/components/cardComponent/styles/fullCardComponent.module.css
+++ b/client/src/components/cardComponent/styles/fullCardComponent.module.css
@@ -303,7 +303,7 @@
     justify-content: center;
     align-items: center;
     background-color: var(--box-bg-tertiary);
-
+    background-color: var(--logo-div-bg);
 }
 
 .logoDivActive {
