--- a/client/src/components/favSectionComponent/loginIds/styles/fullContentCard.module.css
+++ b/client/src/components/favSectionComponent/loginIds/styles/fullContentCard.module.css
@@ -176,6 +176,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--box-bg-tertiary);
+  background-color: var(--logo-div-bg);
 }
 
 
